--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2024.1.1"
     id "com.peterabeles.gversion" version "1.10"
+    id "org.sonarqube" version "4.2.1.3168"
 }
 
 java {
@@ -99,6 +100,14 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
+}
+
+// configure sonarqube analysis
+sonar {
+  properties {
+    property "sonar.projectKey", "TitaniumTitans_2024Crescendo_AY0DzBjBDiJkNSqre_CC"
+    property "sonar.projectName", "2024Crescendo"
+  }
 }
 
 // Simulation configuration (e.g. environment variables).
