--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -1,38 +1,41 @@
-name: Build
+---
+name: SonarQube Analysis
 
 on:
   push:
-    branches:
-      - main
+  pull_request:
+    branches: [ "main" ]
+    types: [opened, reopened, review_requested]
+  pull_request_review:
+    types: [edited, submitted]
+  workflow_dispatch:
 
 
 jobs:
   build:
-    name: Build
+    name: SonarQube Build
     runs-on: ubuntu-latest
-    permissions: read-all
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3.3.0
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3.10.0
         with:
           java-version: 17
+          distribution: 'temurin'
+          cache: 'gradle'
       - name: Cache SonarQube packages
-        uses: actions/cache@v1
+        uses: actions/cache@v3.2.5
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Gradle packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
+      - name: Run checkstyle
+        run: ./gradlew checkstyleMain
       - name: Build and analyze
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: ./gradlew build sonar --info
