--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -31,8 +31,12 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Run checkstyle
-        run: ./gradlew checkstyleMain
+      - name: Cache Gradle packages
+        uses: actions/cache@v3.2.5
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
