--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/setup-java@v3.10.0
         with:
           java-version: 17
+          distribution: 'temurin'
+          cache: 'gradle'
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
