--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,12 @@ sonar {
 }
 
 // Simulation configuration (e.g. environment variables).
-wpi.sim.addGui()
+//
+// The sim GUI is *disabled* by default to support running
+// AdvantageKit log replay from the command line. Set the
+// value to "true" to enable the sim GUI by default (this
+// is the standard WPILib behavior).
+wpi.sim.addGui().defaultEnabled = true
 wpi.sim.addDriverstation()
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
