--- a/build.gradle
+++ b/build.gradle
@@ -116,8 +116,8 @@ sonar {
 // AdvantageKit log replay from the command line. Set the
 // value to "true" to enable the sim GUI by default (this
 // is the standard WPILib behavior).
-wpi.sim.addGui().setDefaultEnabled(true)
-wpi.sim.addDriverstation()
+wpi.sim.addGui().setDefaultEnabled(false)
+wpi.sim.addDriverstation().setDefaultEnabled(true)
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
 // in order to make them all available at runtime. Also adding the manifest so WPILib
