--- a/build.gradle
+++ b/build.gradle
@@ -50,12 +50,12 @@ deploy {
 
         frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
           // Enable VisualVM connection
-          jvmArgs.add("-Dcom.sun.management.jmxremote=true")
-          jvmArgs.add("-Dcom.sun.management.jmxremote.port=1198")
-          jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
-          jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
-          jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
-          jvmArgs.add("-Djava.rmi.server.hostname=10.44.67.2") // Replace XX.XX with team number
+//          jvmArgs.add("-Dcom.sun.management.jmxremote=true")
+//          jvmArgs.add("-Dcom.sun.management.jmxremote.port=1198")
+//          jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
+//          jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
+//          jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
+//          jvmArgs.add("-Djava.rmi.server.hostname=10.44.67.2") // Replace XX.XX with team number
         }
 
         // Static files artifact
