--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id "java"
   id "edu.wpi.first.GradleRIO" version "2024.3.1"
   id "org.sonarqube" version "4.4.1.3373"
+  id "com.peterabeles.gversion" version "1.10"
 }
 
 java {
@@ -139,10 +140,20 @@ deployArtifact.jarTask = jar
 wpi.java.configureExecutableTasks(jar)
 wpi.java.configureTestTasks(test)
 
+// Create version file
+project.compileJava.dependsOn(createVersionFile)
+gversion {
+  srcDir       = "src/main/java/"
+  classPackage = "frc.robot"
+  className    = "BuildConstants"
+  dateFormat   = "yyyy-MM-dd HH:mm:ss z"
+  timeZone     = "America/New_York"
+  indent       = "  "
+}
+
 // Configure string concat to always inline compile
 tasks.withType(JavaCompile) {
   options.compilerArgs.add '-XDstringConcat=inline'
-
 }
 
 
